2005-12-03 13:51  Andrej Kacian <andrej@kacian.sk>
	* src: Moved rssyl_parse_*() functions to a separate file.

2005-12-03 13:51  Andrej Kacian <andrej@kacian.sk>
	* src/feed.c: fix logic and possible segfault in link handling in
		rssyl_parse_atom()

2005-12-03 06:16  Andrej Kacian <andrej@kacian.sk>
	* src/feed.c, src/rssyl.c: use sylpheed's make_dir() instead of mkdir(). Use
		glib's g_file_test() instead of opendir() to check if the dir exists.
	* configure.ac: Bumped version to 0.2

2005-12-01 17:44  Andrej Kacian <andrej@kacian.sk>
	* src: Three patches by Colin Leroy: fix expired items number GUI after
		restart, fix a memory leak in rssyl_parse_rss, Atom feed parser.

2005-12-01 05:19  Andrej Kacian <andrej@kacian.sk>
	* src/feed.c: Ignore newline in feed item title.

2005-11-29 21:38  Andrej Kacian <andrej@kacian.sk>
	* src/rssyl_cb_menu.c: Applied Colin's patch to honor sylpheed's offline
		setting.
	* src: Implement old item expiration

2005-11-29 14:39  Andrej Kacian <andrej@kacian.sk>
	* src: Applied three patches from Colin - CURLOPT_USERAGENT, unicode
		feeditem fields handling, multiline headers parsing.

2005-11-29 03:23  Andrej Kacian <andrej@kacian.sk>
	* src/feedprops.[ch]: Move some strings to precompiler macros.

2005-11-29 03:23  Andrej Kacian <andrej@kacian.sk>
	* src/feed.[ch]: Update contents of existing entry if changed.

2005-11-28 13:21  Andrej Kacian <andrej@kacian.sk>
	* src: Move new feed handling code from rssyl_new_feed_cb() to new
		rssyl_subscribe_new_feed(), so it can be reused for generic feed adding.
	* src: Add mailbox and one default feed if no RSSyl mailbox is found on
		startup. Patch by Colin Leroy.

2005-11-28 12:25  Andrej Kacian <andrej@kacian.sk>
	* src/feed.c: Validate (or try to convert) feed text to UTF-8 when adding
		new items. Patch by Colin Leroy.

2005-11-28 05:59  Andrej Kacian <andrej@kacian.sk>
	* src: Made feed fetching run in another thread, if pthreads are available.